Convert site to running on Fresh Add deno_open_telemetry

--- a/static/style.css
+++ b/static/style.css
@@ -5,19 +5,19 @@
 }
 
 body {
-  font-size:16px;
-  line-height:1.5;
-  margin:0 auto;
-  max-width:728px;
+  font-size: 16px;
+  line-height: 1.5;
+  margin: 0 auto;
+  max-width: 728px;
   -webkit-text-size-adjust: 100%;
 }
 
 main {
-  padding:1em;
+  padding: 1em;
 }
 
 header {
-  padding:1em 1em 0;
+  padding: 1em 1em 0;
 }
 
 nav {
@@ -26,24 +26,24 @@ nav {
 }
 
 nav a {
-  margin-right:1em;
-  margin-bottom:.5em;
+  margin-right: 1em;
+  margin-bottom: 0.5em;
 }
 
 article {
-  margin-bottom:2em
+  margin-bottom: 2em;
 }
 
 p {
   padding-bottom: 15px;
 }
- 
+
 blockquote {
-  display:block;
-  font-style:italic;
-  border-left:4px solid #00000014;
-  padding-left:1em;
-  margin-bottom:1em
+  display: block;
+  font-style: italic;
+  border-left: 4px solid #00000014;
+  padding-left: 1em;
+  margin-bottom: 1em;
 }
 .tags {
   display: block;
