Added snippets and screenshots to deno_open_telemetry

--- a/static/style.css
+++ b/static/style.css
@@ -45,6 +45,13 @@ blockquote {
   padding-left: 1em;
   margin-bottom: 1em;
 }
+
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
 .tags {
   display: block;
 }
