--- a/static/style.css
+++ b/static/style.css
@@ -4,6 +4,10 @@
   padding: 0;
 }
 
+html {
+  scrollbar-gutter: stable;
+}
+
 body {
   font-size: 16px;
   line-height: 1.5;
@@ -44,14 +48,6 @@ time {
   font-family: Helvetica, sans-serif;
 }
 
-blockquote {
-  display: block;
-  font-style: italic;
-  border-left: 4px solid #00000014;
-  padding-left: 1em;
-  margin-bottom: 1em;
-}
-
 img {
   width: 100%;
   height: 100%;
@@ -62,8 +58,6 @@ img {
   margin-bottom: 0.5rem;
 }
 
-.sourceCode {
-  background-color: #f0f0f0;
-  overflow-x: scroll;
-  margin-bottom: 15px;
+.title h1 {
+  font-size: 1.5em;
 }
