--- a/static/style.css
+++ b/static/style.css
@@ -34,10 +34,14 @@ footer {
   text-align: center;
   margin-top: auto;
   margin-bottom: 0;
+  display: inline-flex;
+  flex-flow: row wrap;
+  justify-content: center;
 }
 
-footer a {
+footer * {
   color: darkslategray;
+  font-size: 16px;
   margin-right: 1em;
   margin-bottom: 0.5em;
 }
@@ -57,7 +61,7 @@ article {
   margin-bottom: 2em;
 }
 
-p {
+article p {
   font-family: Helvetica, sans-serif;
   padding-bottom: 15px;
 }
