--- a/static/style.css
+++ b/static/style.css
@@ -30,13 +30,18 @@ header {
 }
 
 footer {
+  font-family: Helvetica, sans-serif;
+  font-size: 14px;
   padding: 1em 1em 0;
   text-align: center;
   margin-top: auto;
   margin-bottom: 0;
+  display: inline-flex;
+  flex-flow: row wrap;
+  justify-content: center;
 }
 
-footer a {
+footer * {
   color: darkslategray;
   margin-right: 1em;
   margin-bottom: 0.5em;
@@ -57,7 +62,7 @@ article {
   margin-bottom: 2em;
 }
 
-p {
+article p {
   font-family: Helvetica, sans-serif;
   padding-bottom: 15px;
 }
